source/sass/base/_global.scss
// ======================================================
// Base :: Global
// ======================================================

html {
  height: 100%;
  overflow-x: hidden;
  font-size: $font-size-small + 1;
}

body {
  font-family: $font-family-base;
  font-weight: $font-weight-base;
  margin: 0;
  font-size: $font-size-base - 1;
  line-height: 1.42857143;
  color: $cl-dark-light;
  text-align: left;
  padding: 0;
  background-color: $cl-gray;
  height: auto;
  min-height: 100%;
  padding-top: 61px;
}

img {
  vertical-align: middle;
  max-width: 100%;
  height: auto;
  border: 0;
}

a {
  color: $cl-blue;

  &:hover,
  &:focus,
  &:active {
    outline: 0;
    box-shadow: none;
    text-decoration: none;
  }
}

ul,
ol {
  list-style: none;
  padding: 0;
  margin: 0;
}

.dropdown-menu {
  box-shadow: 0 0 6px 0 rgba($cl-dark, .12);
  border-radius: 3px;
  padding: 7px 0;
  min-width: 185px;
  line-height: 18px;
}

.glyphicon {
  display: inline-block;
  font: 14px/1 $font-icon;
  font-size: 1.615rem;
  text-rendering: auto;
}

.icon-arrow-left:before {
  content: '\f2fa';
}

.icon-arrow-right:before {
  content: '\f2fb';
}

.page-content {
  position: relative;
  left: 0;
  margin-left: 230px;
  min-height: 100%;
}

.main-content {
  padding: 25px;
}

.card {
  background-color: $cl-white;
  margin-bottom: 25px;
  box-shadow: 0 0 4px 0 rgba($cl-dark, .04);
  border-width: 0;
  border-radius: 3px;
  display: block;
}

.back-to-top {
  cursor: pointer;
  position: fixed;
  bottom: 10px;
  right: 10px;
  background-color: rgba($cl-dark, .6);
  padding: 0 14px;
  display: none;
  border-radius: 4px;
  z-index: 1071;

  &:hover {
    background-color: rgba($cl-dark, .8);
  }

  &:before {
    color: $cl-white;
    content: '\f2fc';
    font-family: $font-icon;
    font-size: 2.538rem;
    display: inline-block;
    vertical-align: middle;
  }
}

